# serial

./: CMakeLists.txt  README.md  conanfile.py
include/serial/: serial.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
